// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<li
  className="DropdownListItem"
  data-test-id="cf-ui-dropdown-list-item"
>
  DropdownMenuItem
</li>
`;

exports[`renders the component as active 1`] = `
<li
  className="DropdownListItem DropdownListItem--active"
  data-test-id="cf-ui-dropdown-list-item"
>
  entry
</li>
`;

exports[`renders the component as disabled 1`] = `
<li
  className="DropdownListItem DropdownListItem--disabled"
  data-test-id="cf-ui-dropdown-list-item"
>
  entry
</li>
`;

exports[`renders the component as disabled 2`] = `
<li
  className="DropdownListItem DropdownListItem--disabled"
  data-test-id="cf-ui-dropdown-list-item"
>
  entry
</li>
`;

exports[`renders the component with an additional class name 1`] = `
<li
  className="DropdownListItem my-extra-class"
  data-test-id="cf-ui-dropdown-list-item"
>
  <DropdownListItem
    isActive={false}
    isDisabled={false}
    isTitle={false}
    onEnter={[Function]}
    onLeave={[Function]}
    testId="cf-ui-dropdown-list-item"
  >
    Entry
  </DropdownListItem>
</li>
`;
